Added imgui Moved folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,16 @@ project(One)
 set(CMAKE_CXX_STANDARD 20)
 find_package(PkgConfig REQUIRED)
 
-file(GLOB_RECURSE SRCS src/*.cpp)
+file(GLOB_RECURSE SRCS Engine/src/*.cpp)
 file(GLOB_RECURSE PROTECT_ONE_SRC games/ProjectOne/*.cpp)
 file(GLOB_RECURSE TESTS tests/Units/*.h)
 
-include_directories(include)
+include_directories(Engine/include)
 include_directories(lib)
 
 add_executable(OneTest tests/main.cpp ${SRCS})
 add_library(One ${SRCS})
-add_executable(ProjectOne games/main.cpp ${PROTECT_ONE_SRC} ${SRCS})
+add_executable(ProjectOne ${PROTECT_ONE_SRC} ${SRCS})
 add_executable(UnitTests tests/tests_main.cpp ${TESTS} ${SRCS})
 
 add_subdirectory(lib/googletest)
