Moved to std any

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,16 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(PkgConfig REQUIRED)
 
 file(GLOB_RECURSE SRCS Engine/src/*.cpp)
-file(GLOB_RECURSE PROTECT_ONE_SRC games/ProjectOne/*.cpp)
+file(GLOB_RECURSE PROTECT_ONE_SRC tests/TestGame/*.cpp)
 file(GLOB_RECURSE TESTS tests/Units/*.h)
 
 include_directories(Engine/include)
 include_directories(lib)
 
-add_executable(OneTest tests/main.cpp ${SRCS})
-add_library(One ${SRCS})
-add_executable(ProjectOne ${PROTECT_ONE_SRC} ${SRCS})
-add_executable(UnitTests tests/tests_main.cpp ${TESTS} ${SRCS})
+add_executable(ApiTest tests/main.cpp ${SRCS})
+add_library(One SHARED ${SRCS})
+add_executable(GameTest ${PROTECT_ONE_SRC})
+add_executable(Units tests/tests_main.cpp ${TESTS} ${SRCS})
 
 add_subdirectory(lib/googletest)
 include_directories(lib/googletest/googletest/include)
@@ -26,10 +26,10 @@ find_package(GLEW REQUIRED)
 find_package(glm REQUIRED)
 
 include_directories(${GLFW_INCLUDE_DIRS} $(GLEW_INCLUDE_DIRS) $(GLM_INCLUDE_DIRS))
-target_link_libraries(OneTest ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} OpenGL)
-target_link_libraries(ProjectOne ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} OpenGL)
+target_link_libraries(ApiTest ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} OpenGL)
+target_link_libraries(GameTest One)
 target_link_libraries(One ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} OpenGL)
-target_link_libraries(UnitTests ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} gtest gtest_main OpenGL)
+target_link_libraries(Units ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} ${GLM_LIBRARIES} gtest gtest_main OpenGL)
 
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
